Add signal-slot mechanism
- Implemented signal-slot mechanism.

- Adjusted spacing and indentation of all classes.